[package]
name = "The-Warehouse-Hub---TWH"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
