[package]
name = "The-Warehouse-Hub---TWH"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.0"
dotenvy = "0.15"
redis = { version = "0.32.3", features = ["tokio-comp"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
